--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^15.2.0",
     "graphql-tools": "^6.0.11",
     "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.10",
     "prisma": "^1.34.10",
     "prisma-client-lib": "^1.34.10",
