--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -4,4 +4,4 @@ generate:
   - generator: javascript-client
     output: ../src/generated/prisma-client
 
-endpoint: https://eu1.prisma.sh/neword-2bedf8/sungku_api/dev
+endpoint: https://us1.prisma.sh/neword-2bedf8/sungku_api/dev
